Bug 510969 - 'swap memory' column isn't visible
Summary: 'swap memory' column isn't visible
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.4.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-23 16:28 UTC by zac
Modified: 2025-10-29 03:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zac 2025-10-23 16:28:20 UTC
SUMMARY
There doesn't seem to be a way to add a column to the application/process tables to see the swap memory usage for each app, unless I'm super blind.   There seem to be many other fairly detailed memory types which aren't nearly as often referenced as swap memory though- if one of these is actually equivilant, I'd recommend renaming it

STEPS TO REPRODUCE
1.  Open an application/processes table
2. Click Configure Columns

OBSERVED RESULT
No option to show swap memory usage, despite it being a sensor in other parts of the app

EXPECTED RESULT
Ability to see swap memory breakdown by app
Comment 1 TraceyC 2025-10-23 19:02:02 UTC
I don't see an option to add a column for swap memory either. This would be a new feature, as such I'll change this to a feature request.
Comment 2 Bug Janitor Service 2025-10-27 11:35:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/447
Comment 3 Arjen Hiemstra 2025-10-27 12:49:55 UTC
I was sure I added one when doing a bunch of memory rework a while back, turns out I had - sort of. Everything was there except adding the right thing to the list of available columns. The above MR fixes that.
Comment 4 Arjen Hiemstra 2025-10-27 14:34:25 UTC
Git commit d11e922c095145dd7bef8dc0d390d4ecfa001d70 by Arjen Hiemstra.
Committed on 27/10/2025 at 11:36.
Pushed by ahiemstra into branch 'master'.

processcore: Properly add the swap attribute

We were setting the entire thing up correctly and then didn't add the
right thing to the list of attributes.

M  +1    -1    processcore/extended_process_list.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/d11e922c095145dd7bef8dc0d390d4ecfa001d70
Comment 5 Arjen Hiemstra 2025-10-27 23:26:38 UTC
Git commit 58c3f432950254b059e4598c27521395669e481e by Arjen Hiemstra.
Committed on 27/10/2025 at 23:22.
Pushed by ahiemstra into branch 'Plasma/6.5'.

processcore: Properly add the swap attribute

We were setting the entire thing up correctly and then didn't add the
right thing to the list of attributes.


(cherry picked from commit d11e922c095145dd7bef8dc0d390d4ecfa001d70)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>

M  +1    -1    processcore/extended_process_list.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/58c3f432950254b059e4598c27521395669e481e