processcore: Properly add the swap attribute

We were setting the entire thing up correctly and then didn't add the
right thing to the list of attributes.

BUG: 510969


(cherry picked from commit d11e922c095145dd7bef8dc0d390d4ecfa001d70)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>